infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: template-infra-app-namespace
  labels:
    name: template-infra-app
    environment: dev
