infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-infra-app-service
  namespace: template-infra-app-namespace
  labels:
    app: template-infra-app
spec:
  type: ClusterIP
  selector:
    app: template-infra-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
